--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Geolocation</title>
+        <title>eWatch GPS Tracker</title>
         <!-- Bootstrap CSS-->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
          crossorigin="anonymous">
@@ -12,10 +12,8 @@
       <body>
         <a id="top"></a>
         <div class="container">
-            <p>Geolocation</p>
-            <div id="data">
-
-            </div>
+            <p><b>eWatch GPS Tracker</b></p>
+            <div id="data"></div>
             <div id="map"></div> <!-- where map will display -->
         </div>
 
