added a clear button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                     <select id="selectDate">
                         <option selected="selected" value="0">~</option>
                     </select>
-                    <button id="submit">Submit</button>
+                    <button id="submitBtn">Submit</button>
+                    <button id="clearBtn">Clear</button>
                 </div>
             </div>
             <div id="map"></div> <!-- where map will display -->
